# slipstream-rust-build

.github/workflows/: sync-and-release.yml
crates/slipstream-client/: Cargo.toml
crates/slipstream-client/src/: client.rs  main.rs  runtime.rs  streams.rs
crates/slipstream-client/src/runtime/: setup.rs
crates/slipstream-client/src/streams/: acceptor.rs
crates/slipstream-core/: Cargo.toml
crates/slipstream-core/src/: cli.rs  lib.rs  net.rs  tcp.rs
crates/slipstream-dns/: Cargo.toml
crates/slipstream-ffi/src/: lib.rs  picoquic.rs  runtime.rs
crates/slipstream-server/: Cargo.toml
crates/slipstream-server/src/: main.rs  server.rs  streams.rs
crates/slipstream-server/src/streams/: command_dispatch.rs
crates/slipstream-server/tests/: flow_control_e2e.rs
docs/: config.md
